# qmeq

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  TODO.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
docs/source/examples/: RTD_tutorial.nblink  index.rst  symmetries.nblink  tutorial.nblink  types.nblink
docs/source/wrappers/: qmeq.wrappers.c_lapack.rst  qmeq.wrappers.c_mytypes.rst  qmeq.wrappers.mytypes.rst
examples/: README.md
examples/appendix/: 00_types.ipynb  01_symmetries.ipynb
examples/scripts/: example1a_spinful_single_orbital.py  example1b_spinful_single_orbital.py  example1c_spinful_single_orbital.py  example2_spinless_double_dot.py  example3_spinful_triple_dot.py
examples/tutorial/: RTD_tutorial.ipynb  tutorial.ipynb
qmeq/: __init__.py  _backend.py  baths.py  leadstun.py
qmeq/approach/: __init__.py
qmeq/builder/: builder.py  builder_base.py  builder_elph.py
qmeq/specfunc/: __init__.py  c_specfunc_elph.pyx  specfunc_elph.py
qmeq/tests/: conftest.py  test_backend.py  test_examples.py  test_specfunc.py
qmeq/wrappers/: c_mytypes.pxd
